manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: app.devopskotresha.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: appscrip-service
            port:
              number: 80
  - host: nginx.devopskotresha.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
